2001-07-03  Dave Peticolas  <dave@krondo.com>

	* src/MultiLedger.c: same as below

	* src/register/table-allgui.c: same as below

	* src/register/splitreg.c: same as below

	* src/register/splitreg.h: same as below

	* src/register/table-allgui.h: rename TableView to TableModel.
	Put cell data handlers into the model.

2001-07-02  Dave Peticolas  <dave@krondo.com>

	* many header files: apply Ben Stanley's script to
	convert __HEADER_H__ to HEADER_H. All names starting
	with '_' are reserved.

	* src/gnome/gnc-dateedit.c: sync with datecell-gnome.c

	* src/register/gnome/datecell-gnome.c: use GDate to do
	date manipulations.

	* src/scm/bootstrap.scm.in: instead of the scheme command,
	just tell the user to run gnucash once as root.

2001-07-01  Dave Peticolas  <dave@krondo.com>

	* src/gnc-ui-util.[ch]: implement towupper and iswlower
	if they are missing

	* src/register/quickfillcell.c: include gnc-ui-util.h

	* src/register/QuickFill.c: include gnc-ui-util.h

	* configure.in: check for towupper

2001-06-29  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/gnc-frequency.c: Added functions for dealing with
	widget changes in the year-subset freq. panels [quarterly,
	tri-yearly, semi-yearly, yearly].

	* src/gnome/gnc-frequency.c (gnc_frequency_save_state): Some
	improvment regarding saving the state of scheduled transactions.
	(gnc_frequency_setup): Much improvement regarding the setup of
	scheduled transactions.
	(year_range_sels_changed): Added to simplify modifications to
	year-range scheduled transactions.

2001-06-29  Dave Peticolas  <dave@krondo.com>

	* src/engine/gnc-account-xml-v2.c: Alex Zepeda's patch
	adding a missing include.

2001-06-27  Dave Peticolas  <dave@krondo.com>

	* src/register/QuickFill.c: same as below

	* src/register/quickfillcell.c: use wide character conversion
	functions

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* po/fr.po: Paul Poulain's french translations

2001-06-26  Dave Peticolas  <dave@krondo.com>
