@@ -1,6 +1,15 @@
 
 gncscmdir = ${GNC_SCM_INSTALL_DIR}/report
 
+gncscm_DATA = \
+  report-list.scm \
+  stylesheet-fancy.scm \
+  stylesheet-plain.scm \
+  txf-export-help.scm \
+  txf-export.scm \
+  view-column.scm \
+  welcome-to-gnucash.scm
+
 gncscmmoddir = ${GNC_SHAREDIR}/guile-modules/gnucash/report
 
 gncscmmod_DATA = \
@@ -19,22 +28,15 @@ gncscmmod_DATA = \
   taxtxf.scm \
   transaction.scm
 
-gncscm_DATA = \
-  report-list.scm \
-  stylesheet-fancy.scm \
-  stylesheet-plain.scm \
-  txf-export-help.scm \
-  txf-export.scm \
-  view-column.scm \
-  welcome-to-gnucash.scm
+SCM_FILES = ${gncscm_DATA} ${gncscmmod_DATA}
 
 EXTRA_DIST = \
   .cvsignore \
-  ${gncscm_DATA}
+  ${SCM_FILES}
 
-guile-strings.c: ${gncscm_DATA}
+guile-strings.c: ${SCM_FILES}
 	rm -f guile-strings.c
-	guile -s ../xgettext.scm ${gncscm_DATA}
+	guile -s ../xgettext.scm ${SCM_FILES}
 CLEANFILES += guile-strings.c
 
 all-local: guile-strings.c
